--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-  <script src="Public/script_extract.js"></script>
+  <script src="script_extract.js"></script>
 
 </body>
 </html>
