--- a/frontend/Appsheet.html
+++ b/frontend/Appsheet.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8" />
   <title>BRIBOX KANPUS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" type="image/png" href="./favicon.png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-  <script src="https://unpkg.com/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
 </head>
 <body>
 
@@ -21,21 +17,17 @@
     <a href="merge.html">Merge PDF</a>
   </nav>
 
-  <h1>
-    <span class="material-icons">assignment</span>
-    Mager Report CM Appsheet
-  </h1>
+  <h1><span class="material-icons">assignment</span>Mager Report CM Appsheet</h1>
   <h2>Upload Form PDF Kalian Disini!</h2>
 
-<label for="pdfFile" class="upload-label">
-  <span class="material-icons">picture_as_pdf</span> Pilih File PDF
-</label>
-<input type="file" id="pdfFile" accept="application/pdf" />
-<br>
+  <label for="pdfFile" class="upload-label">
+    <span class="material-icons">picture_as_pdf</span> Pilih File PDF
+  </label>
+  <input type="file" id="pdfFile" accept="application/pdf" />
+  <br>
   <div id="output">Text akan muncul di sini...</div>
   <button id="copyBtn">Copy</button>
-
-  <script src="Appsheet.js"></script>
-
+  
+  <script src="Appsheet.js"></script> 
 </body>
 </html>
